# sqldetector_qwen

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sqldetector_qwen.py
.github/workflows/: ci.yml
presets/: api.toml  budget-ci.toml  crawler.toml  fast.toml  forms.toml  spa.toml  stealth.toml  turbo.toml
scripts/: profile_fuzzer.py
sqldetector/: __init__.py  fingerprint.py  llm_cache.py  plugin_registry.py  prefilter.py  presets.py  tracewrap.py
sqldetector/analysis/: seed.py
sqldetector/auth/: forms.py  token_freeze.py
sqldetector/autopilot/: __init__.py  policy.py  probes.py  selector.py  store.py  system.py
sqldetector/benchmark/: metrics.py
sqldetector/core/: cache_transport.py  config.py  errors.py  http_async.py  logging.py  state.py  trace_writer.py
sqldetector/db/: fingerprint.py
sqldetector/dedupe/: formsig.py  simhash.py
sqldetector/detect/: bandit.py  ensemble.py  normalizer.py  second_order.py  simhash.py  timing_stats.py
sqldetector/diff/: template.py
sqldetector/discovery/: collector.py  frontier.py  robots.py  sitemap.py
sqldetector/fetch/: range_fetch.py
sqldetector/filter/: bloom.py  dom.py
sqldetector/fingerprint/: rag.py
sqldetector/fingerprint_rag/: rag.py
sqldetector/fuzz/: bytefuzz.py  content_types.py  header_mutator.py  hpp.py
sqldetector/fuzzer/: sql_fuzzer.py
sqldetector/guard/: captcha.py  honeypot.py
sqldetector/heur/: server_weight.py
sqldetector/llm/: accelerated.py
sqldetector/mining/: shadow_param.py
sqldetector/modules/auth/: oauth.py
sqldetector/modules/ci/: diff.py
sqldetector/modules/cluster/: signature.py
sqldetector/modules/crawl/: etag.py
sqldetector/modules/detect/: layer_split.py
sqldetector/modules/graphql/: engine.py
sqldetector/net/: cache_bypass.py  dialer.py  dns_cache.py  locale_shard.py  method_override.py  prewarm.py
sqldetector/optimizer/: online.py
sqldetector/pacing/: cpu_pacer.py
sqldetector/payload/: grammar.py  l10n.py  transform.py
sqldetector/planner/: adaptive.py  pipeline.py
sqldetector/poc/: safe.py
sqldetector/report/: compose.py  sarif.py
sqldetector/runners/: micro.py
sqldetector/scheduler/: budget.py
sqldetector/scheduling/: bandit.py
sqldetector/seed/: subdomains.py
sqldetector/sign/: sigv4.py
sqldetector/skip/: bloom.py
sqldetector/timing/: twin_sampler.py
sqldetector/ui/: narrate.py
sqldetector/upload/: csv_import.py
sqldetector/validation/: differential.py
sqldetector/waf/: fingerprint.py
tests/: test_adaptive_planner.py  test_bandit.py  test_bloom.py  test_bytefuzz.py  test_cache.py  test_dedupe.py  test_delta_debug.py  test_differential.py  test_discovery.py  test_dom_filter.py  test_etag_conditional.py  test_fingerprint.py  test_formsig.py  test_frontier_priority.py  test_fusion.py  test_hpp.py  test_http_cache.py  test_http_client.py  test_importers.py  test_kg.py  test_normalizer.py  test_online_opt.py  test_param_infer.py  test_payload_transform.py  test_pipeline_progress.py  test_pipeline_waf_cloudscraper.py  test_pipeline_with_mock.py  test_plugins.py  test_poc.py  test_policy_merge.py  test_prefilter.py  test_range_fetch.py  test_safe_poc.py  test_seed.py  test_selector_signals.py  test_signature_cluster.py  test_simhash.py  test_smoke.py  test_sql_fuzzer.py  test_system_tuning.py  (+8 more)
tests/fixtures/: openapi.json  postman.json  sample.har
tests/utils/: mock_vuln_app.py
(+31 files in other folders)
