[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqldetector_qwen"
version = "0.1.0"
description = "Modular SQL injection detector"
authors = [{name = "AutoGen"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "anyio>=4.0",
    "lxml>=5.0",
    "xxhash>=3.4",
    "playwright>=1.45",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]
test = [
    "pytest",
    "pytest-asyncio",
]
legacy = [
    "beautifulsoup4",
    "cloudscraper",
    "llama-cpp-python==0.2.68",
    "colorama",
]
otel = [
    "opentelemetry-sdk>=1.26",
    "opentelemetry-exporter-otlp>=1.26"
]

[project.scripts]
sqldetector = "sqldetector_qwen:main"

[tool.setuptools.packages.find]
include = ["sqldetector*"]

[tool.setuptools]
py-modules = ["sqldetector_qwen"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
